# smol-launcher

./: Cargo.toml  license  readme.md
.github/workflows/: upload.yml
src/: auth.rs  main.rs  setup.rs
