[package]
name = "smol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanoserde = "0.1"
directories = "5.0"
anyhow = "1.0"
native-dialog = "0.6"
sha1_smol = "1.0"
tokio = { version = "1.32", features = ["rt-multi-thread", "macros"] }
reqwest = "0.11"
futures = "0.3"
